--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: SSH and deploy to VPS
-        uses: appleboy/ssh-action@v0.1.8
+        uses: actions/ssh-action@v0.1.8
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
             cd ~/myapp || (mkdir ~/myapp && cd ~/myapp)
             git clone https://github.com/LegrandThomas/test_deploy.git . || (git fetch && git checkout origin/main)
             docker-compose down
