--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,5 @@ jobs:
           script: |
             cd ~/myapp || mkdir ~/myapp && cd ~/myapp
             git clone https://github.com/LegrandThomas/test_deploy.git . || git pull origin main
-            docker-compose down
-            docker-compose up -d --build
+            sudo docker-compose down
+            sudo docker-compose up -d --build
