--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./front
     restart: always
     ports:
-      - "8080:3000"
+      - "8080:3000" #redirection port
 
   api:
     build: ./api
