--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3001  -H 0.0.0.0",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -p 3001  -H 0.0.0.0",
     "lint": "next lint"
   },
   "dependencies": {
