--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/myapp || mkdir ~/myapp && cd ~/myapp
-            git pull origin main
+            cd ~/thomas || mkdir ~/thomas && cd ~/thomas
+            git clone https://github.com/LegrandThomas/test_deploy.git . || git pull origin main
             sudo docker-compose down
             sudo docker-compose up -d --build
