--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd ~/thomas || mkdir ~/thomas && cd ~/thomas
-            git clone https://github.com/LegrandThomas/test_deploy.git . || git pull origin main
-            sudo docker-compose down
+            git pull origin main
+            sudo docker-compose down -v
+            sudo docker image prune -a
             sudo docker-compose up -d --build
