--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: ./front
     restart: always
     ports:
-      - "3000:3000"  # Le front-end tourne sur le port 3000 à l'intérieur du conteneur
+      - "8080:3000"  # Le front-end écoute sur le port 3000 en interne et est exposé sur le port 8080 sur l'hôte
     networks:
       - mynetwork
 
@@ -12,7 +12,7 @@ services:
     build: ./api
     restart: always
     ports:
-      - "3001:3001"  # L'API tourne sur le port 3001 à l'intérieur du conteneur
+      - "8181:3001"  # L'API est accessible via le port 8181 sur l'hôte
     environment:
       DATABASE_URL: postgres://postgres:password@postgres:5432/base_test
     depends_on:
@@ -39,9 +39,9 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "9018:8080"  # Nginx est exposé sur le port 9018
+      - "9018:9018"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro  # Montage du fichier nginx.conf
     depends_on:
       - frontend
       - api
