--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,16 @@
 server {
-    listen 8080;
+    listen 9018;
 
-    location /api/ {
-        proxy_pass http://api:3001/;
+    location / {
+        proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location / {
-        proxy_pass http://frontend:3000/;
+    location /api/ {
+        proxy_pass http://api:3001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
