--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd ~/thomas || mkdir ~/thomas && cd ~/thomas
-            git pull origin main
+            git clone https://github.com/LegrandThomas/test_deploy.git . || git pull origin main
             sudo docker-compose down -v
             sudo docker image prune -a
             sudo docker-compose up -d --build
