--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to VPS
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,8 +6,50 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build Docker images
+        run: docker-compose build
+
+  run:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Run Docker containers
+        run: docker-compose up -d
+
+  test:
+    runs-on: ubuntu-latest
+    needs: run
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run tests
+        run: docker-compose exec api npm run test
+      - name: Stop Docker containers
+        run: docker-compose down
+
   deploy:
     runs-on: ubuntu-latest
+    needs: test
+    if: success()
 
     steps:
       - name: Checkout code
