--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: docker-compose exec api npm run test
+        run: docker-compose exec api npm run test || docker-compose logs api
+
       - name: Stop Docker containers
+        if: always()
         run: docker-compose down
 
   deploy:
