--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: docker-compose exec api npm run test || docker-compose logs api
+        run: |
+          docker-compose exec api npm run test || true
+          docker-compose logs api
 
       - name: Stop Docker containers
         if: always()
