--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Build, Test and Deploy
 
 on:
   push:
@@ -13,11 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build Docker images
-        run: docker-compose build
+      - name: Build Docker Containers
+        run: |
+          docker-compose down -v
+          docker-compose up -d --build
 
   run:
     runs-on: ubuntu-latest
@@ -27,10 +26,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Run Docker containers
+      - name: Start Docker Containers
         run: docker-compose up -d
 
   test:
@@ -41,19 +37,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Run tests
-        run: |
-          docker-compose exec thomas_api_1 npm run test || true
-          docker-compose logs thomas_api_1
+      - name: Install Dependencies
+        run: docker-compose exec api npm install
 
-      - name: Stop Docker containers
-        if: always()
-        run: docker-compose down
+      - name: Run Tests
+        run: docker-compose exec api npm run test
 
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: success()
 
     steps:
       - name: Checkout code
