--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Pull from Git origin
+        run: git pull origin main
+
       - name: Build Docker Containers
         run: |
           docker-compose down -v
-          docker-compose up -d --build
+          docker-compose pull  # Pull latest images if any
+          docker-compose build
 
   run:
     runs-on: ubuntu-latest
@@ -37,11 +41,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Dependencies
-        run: docker exec thomas_api_1 npm install
+      - name: Wait for containers to start
+        run: sleep 30s  # Adjust based on your application startup time
 
       - name: Run Tests
-        run: docker exec thomas_api_1 npm run test
+        run: |
+          docker exec thomas_api npm install --prefix ./api  # Install dependencies if needed
+          docker exec thomas_api npm run test
 
   deploy:
     runs-on: ubuntu-latest
