--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start Docker Containers
-        run: docker-compose up -d
+        run: docker-compose up -d --build
 
   test:
     runs-on: ubuntu-latest
@@ -41,8 +41,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Wait for containers to start
-        run: sleep 30s  # Adjust based on your application startup time
+      # - name: Wait for containers to start
+      #   run: sleep 30s  # Adjust based on your application startup time
 
       - name: Run Tests
         run: |
