--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,7 @@ jobs:
           script: |
             cd ~/thomas || mkdir ~/thomas && cd ~/thomas
             git pull origin main
-            sudo docker-compose down -v
-            sudo docker image prune -a
-            sudo docker-compose up -d --build
+            
 
   build:
     runs-on: ubuntu-latest
@@ -37,8 +35,9 @@ jobs:
 
       - name: Build Docker Containers
         run: |
-          docker-compose pull
-          docker-compose build
+          sudo docker-compose down -v
+          sudo docker image prune -a
+            
 
   run:
     runs-on: ubuntu-latest
@@ -49,10 +48,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start Docker Containers
-        run: docker-compose up -d
+        run: sudo docker-compose up -d --build
 
       - name: Wait for containers to start
-        run: sleep 30s  # Adjust based on your application startup time
+        run: sleep 15s 
 
   test:
     runs-on: ubuntu-latest
@@ -63,6 +62,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Dependencies and Run Tests
-        run: |
-          docker exec thomas_api_1 npm install --prefix ./api
-          docker exec thomas_api_1 npm run test
+        run: docker exec thomas_api_1 npm run test
