--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           sudo docker image prune -a
             
 
-  run:
+  run and test:
     runs-on: ubuntu-latest
     needs: build
 
@@ -50,16 +50,4 @@ jobs:
       - name: Start Docker Containers
         run: sudo docker-compose up -d --build
 
-      - name: Wait for containers to start
-        run: sleep 15s 
-
-  test:
-    runs-on: ubuntu-latest
-    needs: run
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Dependencies and Run Tests
-        run: docker exec thomas_api_1 npm run test
+    
