--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "test": "jest",
+    "test": "jest --verbose",
     "lint": "next lint"
   },
   "dependencies": {
