--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy, Build, Run and Test
+name: Deploy, Build, Run, and Test
 
 on:
   push:
@@ -23,7 +23,6 @@ jobs:
           script: |
             cd ~/thomas || mkdir ~/thomas && cd ~/thomas
             git pull origin main
-            
 
   build:
     runs-on: ubuntu-latest
@@ -34,10 +33,16 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker Containers
-        run: |
-          sudo docker-compose down -v
-          sudo docker image prune -a
-            
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.VPS_IP }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            cd ~/thomas
+            sudo docker-compose down -v
+            sudo docker-compose build
 
   run:
     runs-on: ubuntu-latest
@@ -48,6 +53,31 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start Docker Containers
-        run: sudo docker-compose up -d --build
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.VPS_IP }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            cd ~/thomas
+            sudo docker-compose up -d
 
-    
+  test:
+    runs-on: ubuntu-latest
+    needs: run
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Run Tests
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.VPS_IP }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            cd ~/thomas
+            sudo docker exec thomas_api_1 npm run test
