--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,12 +10,6 @@ COPY next.config.mjs ./
 COPY __tests__ ./__tests__
 COPY pages ./pages
 
-# Copier le script de démarrage personnalisé
-COPY start-and-test.sh ./
-
-# Rendre le script exécutable
-RUN chmod +x start-and-test.sh
-
 # Installation des dépendances
 RUN npm install --production
 
@@ -25,5 +19,5 @@ RUN npm run build
 # Exposition du port nécessaire pour l'API
 EXPOSE 3001
 
-# Commande pour démarrer l'API et exécuter les tests
-CMD ["./start-and-test.sh"]
+# Commande pour démarrer l'API
+CMD ["npm", "run", "start"]
