--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,4 +63,28 @@ jobs:
             cd ~/thomas
             sudo docker-compose up -d
 
- 
+  test:
+    runs-on: ubuntu-latest
+    needs: run
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Wait for API to be ready
+        uses: jakejarvis/wait-for-it-action@v1.1.3
+        with:
+          host: ${{ secrets.VPS_IP }}
+          port: 3001
+          timeout: 60
+
+      - name: Run Tests
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.VPS_IP }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            cd ~/thomas
+            npm run test
