--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,11 +72,18 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Wait for API to be ready
-        uses: jakejarvis/wait-for-it-action@v1.1.3
+        uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.VPS_IP }}
-          port: 3001
-          timeout: 60
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
+          script: |
+            while ! curl -sSf http://localhost:3001 > /dev/null; do
+              echo "Waiting for API to be ready..."
+              sleep 5
+            done
+            echo "API is ready!"
 
       - name: Run Tests
         uses: appleboy/ssh-action@v0.1.8
