--- a/api/package.json
+++ b/api/package.json
@@ -10,30 +10,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
     "cors-anywhere": "^0.4.4",
+    "jest": "^29.7.0",
     "next": "14.2.4",
     "nextjs-cors": "^2.2.0",
     "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-jest": "^29.1.5"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "jest": "^29.7.0",
     "node-mocks-http": "^1.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.5",
     "typescript": "^5"
   },
   "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node"
-  }
+  "preset": "ts-jest",
+  "testEnvironment": "node",
+  "testMatch": [
+    "**/__tests__/**/*.ts?(x)",
+    "**/?(*.)+(spec|test).ts?(x)"
+  ]
+}
+
+
 }
