--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           script: |
             if [ ! -d ~/env_test ]; then
               mkdir -p ~/env_test
-              git clone https://github.com/${{ repo }} ~/env_test
+              git clone https://github.com/${{ secrets.REPO }} ~/env_test
             fi
             cd ~/env_test
             git pull origin main
@@ -75,7 +75,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            while ! curl -sSf http://localhost:3001/api/dogs > /dev/null; do
+            while ! curl -sSf http://localhost:3001/${{ secrets.ROAD }} > /dev/null; do
               echo "Waiting for API to be ready..."
               sleep 5
             done
@@ -123,7 +123,7 @@ jobs:
           script: |
             if [ ! -d ~/thomas ]; then
               mkdir -p ~/thomas
-              git clone https://github.com/${{ repo }} ~/thomas
+              git clone https://github.com/${{ secrets.REPO }} ~/thomas
             fi
             cd ~/thomas
             git pull origin main
