--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,8 +21,13 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test
-            git pull origin main
+            if [ ! -d ~/env_test/test_deploy ]; then
+              mkdir -p ~/env_test
+              git clone https://github.com/${{ github.repository }} ~/env_test/test_deploy
+            else
+              cd ~/env_test/test_deploy
+              git pull origin main
+            fi
 
   build-env-test:
     runs-on: ubuntu-latest
@@ -37,8 +42,8 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test
-            sudo docker-compose down 
+            cd ~/env_test/test_deploy
+            sudo docker-compose down -v
             yes | sudo docker image prune -a
             sudo docker-compose build
 
@@ -55,7 +60,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test
+            cd ~/env_test/test_deploy
             sudo docker-compose up -d
 
   wait-for-api-env-test:
@@ -71,7 +76,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            while ! curl -sSf http://localhost:3001/${{ secrets.ROAD }} > /dev/null; do
+            while ! curl -sSf http://localhost:3001/api/dogs > /dev/null; do
               echo "Waiting for API to be ready..."
               sleep 5
             done
@@ -90,7 +95,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test/api
+            cd ~/env_test/test_deploy/api
             if ! command -v npm &> /dev/null; then
               echo "npm could not be found, installing..."
               curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -
@@ -117,8 +122,13 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/thomas
-            git pull origin main
+            if [ ! -d ~/thomas ]; then
+              mkdir -p ~/thomas
+              git clone https://github.com/${{ github.repository }} ~/thomas
+            else
+              cd ~/thomas
+              git pull origin main
+            fi
 
       - name: Build Docker Containers (thomas)
         uses: appleboy/ssh-action@v0.1.8
@@ -129,7 +139,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd ~/thomas
-            sudo docker-compose down 
+            sudo docker-compose down -v
             yes | sudo docker image prune -a
             sudo docker-compose build
 
