--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,15 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-              cd ~/env_test
+            if [ ! -d ~/env_test/test_deploy ]; then
+              mkdir -p ~/env_test
+              git clone https://github.com/${{ secrets.REPO }} ~/env_test/test_deploy
+            else
+              cd ~/env_test/test_deploy
+              git config --global --add safe.directory /home/${{ secrets.VPS_USER }}/env_test/test_deploy
               git pull origin main
-            
+            fi
+
   build-env-test:
     runs-on: ubuntu-latest
     needs: deploy-to-env-test
@@ -37,8 +43,8 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test
-            sudo docker-compose down -v
+            cd ~/env_test/test_deploy
+            sudo docker-compose down 
             yes | sudo docker image prune -a
             sudo docker-compose build
 
@@ -55,7 +61,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test
+            cd ~/env_test/test_deploy
             sudo docker-compose up -d
 
   wait-for-api-env-test:
@@ -71,7 +77,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            while ! curl -sSf http://localhost:3001/api/dogs > /dev/null; do
+            while ! curl -sSf http://localhost:3001/${{ secrets.ROAD }} > /dev/null; do
               echo "Waiting for API to be ready..."
               sleep 5
             done
@@ -90,7 +96,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd ~/env_test/api
+            cd ~/env_test/test_deploy/api
             if ! command -v npm &> /dev/null; then
               echo "npm could not be found, installing..."
               curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -
@@ -134,7 +140,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd ~/thomas
-            sudo docker-compose down -v
+            sudo docker-compose down 
             yes | sudo docker image prune -a
             sudo docker-compose build
 
