--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,8 +102,8 @@ jobs:
               curl -sL https://deb.nodesource.com/setup_20.x | sudo -E bash -
               sudo apt-get install -y nodejs
             fi
-            npm install
-            npm run test
+            sudo npm install
+            sudo npm run test
 
             if [ $? -ne 0 ]; then
               echo "Tests failed, exiting with error."
@@ -128,7 +128,7 @@ jobs:
               git clone https://github.com/LegrandThomas/test_deploy.git ~/thomas
             else
               cd ~/thomas
-              git pull origin main
+              sudo git pull origin main
             fi
 
       - name: Build Docker Containers (thomas)
