--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,7 +113,7 @@ jobs:
               yes | sudo docker image prune -a 
             fi
 
-  finalize-deploy:
+  finalize-deploy-on-production:
     runs-on: ubuntu-latest
     needs: test-env-test
 
