--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             if [ ! -d ~/env_test/test_deploy ]; then
+            sudo docker stop $(docker ps -a -q)
+            sudo docker rm $(docker ps -a -q)
               mkdir -p ~/env_test
              sudo git clone https://github.com/LegrandThomas/test_deploy.git ~/env_test/test_deploy
             else
@@ -110,7 +112,9 @@ jobs:
               exit 1
             else
               sudo docker-compose down
-              yes | sudo docker image prune -a 
+              yes | sudo docker image prune -a
+              cd ~/thomas
+              sudo docker-compose up -d 
             fi
 
   finalize-deploy-on-production:
