--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,19 +1,30 @@
-# Utilisation de l'image Node.js LTS comme base
+# Étape de build
+FROM node:20-alpine AS build
+
+# Création du répertoire de travail
+WORKDIR /usr/src/app
+
+# Copie des fichiers de dépendances uniquement
+COPY package*.json ./
+
+# Installation des dépendances
+RUN npm install
+
+# Copie des fichiers de configuration et des fichiers source
+COPY next.config.mjs ./
+COPY pages ./pages
+
+# Construction de l'API
+RUN npm run build
+
+# Étape finale
 FROM node:20-alpine
 
 # Création du répertoire de travail
 WORKDIR /usr/src/app
 
-# Copie des fichiers nécessaires
-COPY package*.json ./
-COPY next.config.mjs ./
-COPY pages ./pages
-
-# Installation des dépendances
-RUN npm install 
-
-# Construction de l'api
-RUN npm run build
+# Copier uniquement les artefacts nécessaires depuis l'étape de build
+COPY --from=build /usr/src/app ./
 
 # Exposition du port nécessaire pour l'API
 EXPOSE 3001
