--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Perpare Deploy, Build, Run, Test et Finalize Deploy
+name: Prepare Deploy, Build, Run, Test et Finalize Deploy
 
 on:
   push:
@@ -47,7 +47,6 @@ jobs:
           script: |
             cd ~/env_test/test_deploy
             sudo docker-compose down 
-            yes | sudo docker image prune -a
             sudo docker-compose build --parallel
 
   run-env-test:
@@ -112,7 +111,6 @@ jobs:
               exit 1
             else
               sudo docker-compose down
-              yes | sudo docker image prune -a
               cd ~/thomas
               sudo docker-compose up -d 
             fi
@@ -148,7 +146,6 @@ jobs:
           script: |
             cd ~/thomas
             sudo docker-compose down 
-            yes | sudo docker image prune -a
             sudo docker-compose build --parallel
 
       - name: Start Docker Containers (thomas)
