--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,15 @@ services:
     build: ./front
     restart: always
     ports:
-      - "3000:3000"  
+      - "3000:3000"
     networks:
       - mynetwork
-
 
   api:
     build: ./api
     restart: always
     ports:
-      - "3001:3001"  
+      - "3001:3001"
     environment:
       DATABASE_URL: postgres://postgres:password@postgres:5432/base_test
     depends_on:
@@ -37,12 +36,26 @@ services:
     networks:
       - mynetwork
 
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_LISTEN_PORT: 80
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+    networks:
+      - mynetwork
+
   nginx:
     image: nginx:alpine
     ports:
       - "8080:8080"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro  # Montage du fichier nginx.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - frontend
       - api
