--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,8 @@ server {
     }
 
     location /pgadmin/ {
-        proxy_pass http://pgadmin:5050/;
+        rewrite ^/pgadmin/(.*)$ /$1 break;
+        proxy_pass http://pgadmin:5050;  # Utilisation du port 5050 pour pgAdmin
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
