--- a/nginx.conf
+++ b/nginx.conf
@@ -18,13 +18,12 @@ server {
     }
 
     location /pgadmin/ {
-        proxy_pass http://pgadmin:5433/;
+        rewrite ^/pgadmin/(.*)$ /$1 break;
+        proxy_pass http://pgadmin:5433;  # Utilisation du port 5433 pour pgAdmin
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+}
 
-        # Optionnel: si pgAdmin est configuré pour utiliser un chemin spécifique
-        # proxy_pass http://pgadmin:5433/pgadmin/;
-    }
 }
