--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-}
+
+    }
+    
+    location /static/ {
+        alias /var/lib/pgadmin/static/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
+    }
 
 }
