--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,46 @@
-server {
-    listen 8080;
+events {
+    worker_connections  1024;
+}
 
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    server {
+        listen 8080;
+
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+
+        location / {
+            proxy_pass http://frontend:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/ {
+            proxy_pass http://api:3001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /pgadmin/ {
+            rewrite ^/pgadmin/(.*)$ /$1 break;
+            proxy_pass http://pgadmin:5433;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            alias /pgadmin4/pgadmin/static/;
+            expires 7d;  # Expiration du cache des fichiers statiques après 7 jours
+            access_log off;
+        }
     }
-
-    location /api/ {
-        proxy_pass http://api:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /pgadmin/ {
-        rewrite ^/pgadmin/(.*)$ /$1 break;
-        proxy_pass http://pgadmin:5433;  # Utilisation du port 5433 pour pgAdmin
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-    }
-
-    location /static/ {
-        alias /pgadmin4/pgadmin/static/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
-    }
-
 }
