--- a/nginx.conf
+++ b/nginx.conf
@@ -31,4 +31,12 @@ server {
         alias /pgadmin4/pgadmin/static/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
     }
 
+    location /browser/ {
+        alias /pgadmin4/pgadmin/browser/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers browsers
+    }
+
+    location /tools/ {
+        alias /pgadmin4/pgadmin/tools/;  # Chemin dans le conteneur pgAdmin où se trouvent les fichiers statiques
+    }
+
 }
